force-app/main/default/objects/StripePaymentSettings__mdt/StripePaymentSettings__mdt.object-meta.xml
<CustomObject>
    <label>Stripe Payment Setting</label>
    <pluralLabel>Stripe Payment Settings</pluralLabel>
</CustomObject>