force-app/main/default/objects/StripePaymentSettings__mdt/fields/CheckoutSessionMode__c.field-meta.xml
<CustomField>
    <fullName>CheckoutSessionMode__c</fullName>
    <label>Checkout Session Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>subscription</fullName>
                <default>true</default>
                <label>subscription</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>