force-app/main/default/objects/StripePaymentSettings__mdt/fields/DefaultMethodCardToken__c.field-meta.xml
<CustomField>
    <fullName>DefaultMethodCardToken__c</fullName>
    <label>Default Method Card Token</label>
    <length>30</length>
    <type>Text</type>
</CustomField>