force-app/main/default/objects/StripePaymentSettings__mdt/fields/DefaultMethodType__c.field-meta.xml
<CustomField>
    <fullName>DefaultMethodType__c</fullName>
    <label>Default Method Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>