force-app/main/default/objects/StripePaymentSettings__mdt/fields/Successful_URL__c.field-meta.xml
<CustomField>
    <fullName>Successful_URL__c</fullName>
    <label>Successful URL</label>
    <length>180</length>
    <type>Text</type>
</CustomField>